2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily-library.scm (not): define hash-for-each for guile 1.6

	* lily/slur-scoring.cc (get_best_curve): handle opt_idx < 0 case.

2006-01-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (main): Debugging aid: catch exceptions.

	* flower/std-string.cc (to_string): Robustication.  Fixes midi
	output with std::string.

2006-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/INSTALL.texi (Top): remove libkpathsea notes.

2006-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Fix -DSTRING_UTILS_INLINED.

2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.7.29

	* lily/relocate.cc (setup_paths): mingw uses std string too.

	* lily/*.cc: various fixes for substr(ARG).

	* lily/sustain-pedal.cc (print): 

	* flower/file-name.cc (slashify): use std strings.

	* flower/string-convert.cc: remove publib.h

	* scm/define-markup-commands.scm (verbatim-file): new markup
	command \verbatim-file

	* Documentation/topdocs/NEWS.tely: fixup URLs

	* input/regression/alignment-vertical-manual-setting.ly (Module):
	new file.

	* lily/align-interface.cc (align_elements_to_extents): overwrite
	translations with numbers in alignment-offsets from left bound

	* scm/page.scm (make-page-stencil): read X-offset from paper-system.
	(page-translate-systems): new function: take into account Y-offset.

	* Documentation/topdocs/NEWS.tely (Top): document new features.

	* input/regression/page-layout-manual-position.ly (Module): new
	file.

2006-01-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc (path::parse_path): Oops.

	* Finish std::string interface.  For now, use std:: marker
	throughout for easy s/r.

2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/putting.itely (Score is a single musical
	expression): typo.
	(Score is a single musical expression): more typos.

	* scm/page.scm (annotate-space-left): thinko.